--- a/I4DAB/Handin2_1/Handin2_1/Handin2_1.csproj
+++ b/I4DAB/Handin2_1/Handin2_1/Handin2_1.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Adresse.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Email.cs" />
+    <Compile Include="Noter.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PersonKartotek.cs" />
     <Compile Include="Program.cs" />
